--- a/emp_backend/src/main/resources/application.properties
+++ b/emp_backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/emp
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password= "\\enter your password"
+spring.datasource.password= nithin1760
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
